--- a/src/main/webapp/app/account/activate/activate.component.html
+++ b/src/main/webapp/app/account/activate/activate.component.html
@@ -4,12 +4,12 @@
             <h1>Activation</h1>
 
             <div class="alert alert-success" *ngIf="success">
-                <span><strong>Your user account has been activated.</strong> Please </span>
-                <a class="alert-link" (click)="login()">sign in</a>.
+                <span><strong>Su cuenta ha sido activada.</strong> Por Favor </span>
+                <a class="alert-link" (click)="login()">Inicie Sesión</a>.
             </div>
 
             <div class="alert alert-danger" *ngIf="error">
-                <strong>Your user could not be activated.</strong> Please use the registration form to sign up.
+                <strong>Su usuario no pudo ser activado.</strong>
             </div>
 
         </div>
