--- a/src/main/webapp/app/entities/focus-group/focus-group-detail.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-detail.component.html
@@ -65,3 +65,26 @@
         </div>
     </div>
 </div>
+
+<div class="card">
+    <div class="card-header">
+        <h2>Grupo de enfoque - {{focusGroup.name}}</h2>
+    </div>
+    <div class="card-body">
+        <div class="card-block">
+            {{focusGroup.description}}
+        </div>
+        <div class="card-block">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="title">
+                        <p>Fecha de inicio: {{focusGroup.beginDate}}</p>
+                    </div>
+                    </div>
+                        <p>Fecha de finalización: {{focusGroup.endDate}}</p>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
