--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,8 @@
-<div class="footer">
-    <p>This is your footer</p>
-</div>
+<footer>
+    <div class="container-fluid">
+        <p class="copyright text-center">
+            Copyright  &copy;  {{currentDate | date: 'yyyy'}} Palaver, All rights reserved.
+        </p>
+
+    </div>
+</footer>
