--- a/src/main/webapp/app/account/activate/activate.component.html
+++ b/src/main/webapp/app/account/activate/activate.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <h1>Activation</h1>
+            <h1>Activación</h1>
 
             <div class="alert alert-success" *ngIf="success">
                 <span><strong>Su cuenta ha sido activada.</strong> Por Favor </span>
