--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title" id="basic-layout-form-center">Formulario de registro:</h4>
+                <h4 class="card-title" id="basic-layout-form-center">Usuario</h4>
 
                 <div class="alert alert-success" *ngIf="success">
                     <strong>Su registro ha sido exitoso!</strong> Por favor revise su correo para verificar su cuenta.
@@ -26,12 +26,13 @@
             </div>
             <div class="card-body">
                 <div class="px-3">
-
                     <form class="form" name="form" role="form" (ngSubmit)="register()" #registerForm="ngForm"
                           *ngIf="!success">
                         <div class="row justify-content-md-center">
                             <div class="col-md-6">
                                 <div class="form-body">
+                                    <h4 class="form-section"><i class="ft-user"></i>Registro</h4>
+                                    <jhi-alert-error></jhi-alert-error>
                                     <div class="form-group">
                                         <label for="login"><i class="ft-edit-3"></i> Nombre de usuario</label>
                                         <input type="text" class="form-control" [(ngModel)]="registerAccount.login"
