--- a/src/main/webapp/app/entities/user-app/user-app.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app.component.html
@@ -3,13 +3,6 @@
         <div class="card">
             <div class="card-header">
                 <h4 class="card-title">Usuarios
-                    <button id="jh-create-entity" class="btn btn-raised btn-primary float-right"
-                            [routerLink]="['/user_apps/new']">
-                        <i class="ft-plus"></i>
-                        <span>
-            Registrar un nuevo usuario
-            </span>
-                    </button>
                 </h4>
             </div>
             <div class="card-body">
@@ -19,21 +12,18 @@
                         <table class="table table-responsive-md text-center">
                             <thead>
                             <tr>
-                                <th><span>Id</span></th>
                                 <th><span></span></th>
-                                <th><span>Nombre de usuario</span></th>
+                                <th><span>Nombre usuario</span></th>
                                 <th><span>Nombre</span></th>
-                                <th><span>Numero de identificación</span></th>
+                                <th><span>Identificación</span></th>
                                 <th><span>Correo electronico</span></th>
-                                <th><span>Direccion</span></th>
                                 <th><span>Rol</span></th>
-                                <th><span>Estado</span></th>
+                                <th><span>Activo</span></th>
                                 <th></th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr *ngFor="let userApp of userApps ;trackBy: trackId">
-                                <td><a [routerLink]="['/user-app', userApp.id, 'view' ]">{{userApp.id}}</a></td>
                                 <td>
                                     <div class="custom-control custom-checkbox m-0">
                                         <input type="checkbox" class="custom-control-input" id="{{userApp.id}}">
@@ -44,9 +34,10 @@
                                 <td>{{userApp.name}}</td>
                                 <td>{{userApp.identificationNumber}}</td>
                                 <td>{{userApp.mail}}</td>
-                                <td>{{userApp.address}}</td>
-                                <td>{{userApp.rol}}</td>
-                                <td>{{userApp.user?.activated}}</td>
+                                <td><p *ngIf="userApp.rol === 'institution'">Institución</p>
+                                    <p *ngIf="userApp.rol === 'participant'">Participante</p></td>
+                                <td><p *ngIf="userApp.user.activated === true">Sí</p>
+                                    <p *ngIf="userApp.user.activated ===false">No</p></td>
                                 <td>
                                     <a class="info p-0" data-original-title="" title=""
                                        [routerLink]="['/user-app', userApp.id, 'view' ]">
@@ -57,7 +48,8 @@
                                         <i class="ft-edit-2 font-medium-3 mr-2"></i>
                                     </a>
                                     <a class="danger p-0" data-original-title="" title=""
-                                       [routerLink]="['/', 'user-app', { outlets: { popup: userApp.id + '/delete'} }]" replaceUrl="true"
+                                       [routerLink]="['/', 'user-app', { outlets: { popup: userApp.id + '/delete'} }]"
+                                       replaceUrl="true"
                                        queryParamsHandling="merge">
                                         <i class="ft-x font-medium-3 mr-2"></i>
                                     </a>
