--- a/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
@@ -1,75 +1,65 @@
 <div class="row justify-content-center">
     <div class="col-8">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+        <form name="editForm" role="form" novalidate (ngSubmit)="save()">
             <div class="row justify-content-md-center"></div>
             <h2 id="jhi-focus-group-heading">Creación de grupos de enfoque</h2>
             <div>
-                <jhi-alert-error></jhi-alert-error>
                 <h4 class="form-section"><i class="ft-users"></i>Información</h4>
                 <div class="form-group" [hidden]="true">
                     <label for="id">ID</label>
                     <input type="text" class="form-control" id="id" name="id"
                            [(ngModel)]="focusGroup.id" readonly/>
                 </div>
-                <div class="form-group" >
+                <div class="form-group">
                     <label class="form-control-label" for="field_name">Nombre</label>
-                    <input type="text" class="form-control" name="name" id="field_name"
+                    <input #floatName="ngModel" type="text" class="form-control" name="name" id="field_name"
                            [(ngModel)]="focusGroup.name" required/>
-                    <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
-                        <small class="form-text text-danger"
-                               [hidden]="!editForm.controls.name?.errors?.required">
-                            ¡Nombre requerido!
-                        </small>
-                    </div>
+                    <small class="form-text text-muted danger" *ngIf="!floatName.valid && (floatName.dirty ||
+                                 floatName.touched)">¡Nombre requerido!
+                    </small>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_description">Descripción</label>
-                    <input type="text" class="form-control" name="description" id="field_description"
+                    <input #floatDescription="ngModel" type="text" class="form-control" name="description"
+                           id="field_description"
                            [(ngModel)]="focusGroup.description" required/>
-                    <div [hidden]="!(editForm.controls.description?.dirty && editForm.controls.description?.invalid)">
-                        <small class="form-text text-danger"
-                               [hidden]="!editForm.controls.description?.errors?.required">
-                            ¡Descripción requerida!
-                        </small>
-                    </div>
+                    <small class="form-text text-muted danger" *ngIf="!floatDescription.valid && (floatDescription.dirty ||
+                                 floatDescription.touched)">¡Descripción requerida!
+                    </small>
                 </div>
 
                 <div class="row">
                     <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <label class="form-control-label" for="field_beginDate">Fecha de inicio estimada</label>
                         <div class="input-group">
-                            <input id="field_beginDate" type="text" class="form-control" name="beginDate" ngbDatepicker
+                            <input #floatStartDate="ngModel" id="field_beginDate" type="text" class="form-control"
+                                   name="beginDate" ngbDatepicker
                                    #beginDateDp="ngbDatepicker" [(ngModel)]="focusGroup.beginDate"
-                                   required/>
+                                   required [readonly]="true"/>
                             <span class="input-group-append">
-                            <button type="button" class="btn btn-secondary" (click)="beginDateDp.toggle()"><fa-icon
-                                [icon]="'calendar-alt'"></fa-icon></button>
-                        </span>
+                                <button type="button" class="btn btn-secondary" (click)="beginDateDp.toggle()"><fa-icon
+                                    [icon]="'calendar-alt'"></fa-icon></button>
+                            </span>
                         </div>
-                        <div [hidden]="!(editForm.controls.beginDate?.dirty && editForm.controls.beginDate?.invalid)">
-                            <small class="form-text text-danger"
-                                   [hidden]="!editForm.controls.beginDate?.errors?.required">
-                                ¡Fecha de inicio requerida!
-                            </small>
-                        </div>
+                        <small class="form-text text-muted danger" *ngIf="!floatStartDate.valid && (floatStartDate.dirty ||
+                                 floatStartDate.touched)">¡Fecha de inicio requerida!
+                        </small>
                     </div>
                     <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <label class="form-control-label" for="field_endDate">Fecha de finalización estimada</label>
                         <div class="input-group">
-                            <input id="field_endDate" type="text" class="form-control" name="endDate" ngbDatepicker
+                            <input #floatEndDate="ngModel" id="field_endDate" type="text" class="form-control"
+                                   name="endDate" ngbDatepicker
                                    #endDateDp="ngbDatepicker" [(ngModel)]="focusGroup.endDate"
-                                   required/>
+                                   required [readonly]="true"/>
                             <span class="input-group-append">
-                            <button type="button" class="btn btn-secondary" (click)="endDateDp.toggle()"><fa-icon
-                                [icon]="'calendar-alt'"></fa-icon></button>
-                        </span>
+                                <button type="button" class="btn btn-secondary" (click)="endDateDp.toggle()"><fa-icon
+                                    [icon]="'calendar-alt'"></fa-icon></button>
+                            </span>
                         </div>
-                        <div [hidden]="!(editForm.controls.endDate?.dirty && editForm.controls.endDate?.invalid)">
-                            <small class="form-text text-danger"
-                                   [hidden]="!editForm.controls.endDate?.errors?.required">
-                                ¡Fecha de finalización requerida!
-                            </small>
-                        </div>
+                        <small class="form-text text-muted danger" *ngIf="!floatEndDate.valid && (floatEndDate.dirty ||
+                                 floatEndDate.touched)">¡Fecha de finalización requerida!
+                        </small>
                     </div>
                 </div>
 
@@ -117,11 +107,12 @@
                 </div>
             </div>
             <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
-                    <i class="ft-x"></i>&nbsp;<span>Cancel</span>
+                <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
+                        (click)="previousState()">
+                    <i class="ft-x"></i>&nbsp;<span> Cancelar</span>
                 </button>
-                <button type="submit" id="save-entity" class="btn btn-primary">
-                    <i class="ft-save"></i>&nbsp;<span>Save</span>
+                <button type="submit" id="save-entity" class="btn btn-raised btn-primary">
+                    <i class="ft-save"></i>&nbsp;<span> Registrar</span>
                 </button>
             </div>
         </form>
