--- a/src/main/webapp/app/entities/focus-group/focus-group.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group.component.html
@@ -1,86 +1,64 @@
-<div>
-    <h2 id="page-heading">
-        <span>Focus Groups</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-focus-group" [routerLink]="['/focus-group/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span >
-            Create new Focus Group
+<div class="row">
+    <div class="col-sm-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Grupo de enfoque
+                    <button id="jh-create-entity" class="btn btn-raised btn-primary float-right" [routerLink]="['/focus-group/new']">
+                        <i class="ft-plus"></i>
+                        <span >
+            Registrar nuevo grupo de enfoque
             </span>
-        </button>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <br/>
-    <div class="table-responsive" *ngIf="focusGroups">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-            <th><span>ID</span></th>
-            <th><span>Name</span></th>
-            <th><span>Description</span></th>
-            <th><span>Begin Date</span></th>
-            <th><span>End Date</span></th>
-            <th><span>Code</span></th>
-            <th><span>Incentive</span></th>
-            <th><span>Institution</span></th>
-            <th><span>Category</span></th>
-            <th><span>Participant</span></th>
-            <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let focusGroup of focusGroups ;trackBy: trackId">
-                <td><a [routerLink]="['/focus-group', focusGroup.id, 'view' ]">{{focusGroup.id}}</a></td>
-                <td>{{focusGroup.name}}</td>
-                <td>{{focusGroup.description}}</td>
-                <td>{{focusGroup.beginDate | date:'mediumDate'}}</td>
-                <td>{{focusGroup.endDate | date:'mediumDate'}}</td>
-                <td>{{focusGroup.code}}</td>
-                <td>
-                    <div *ngIf="focusGroup.incentive">
-                        <a [routerLink]="['../incentive', focusGroup.incentive?.id, 'view' ]" >{{focusGroup.incentive?.id}}</a>
+                    </button>
+                </h4>
+            </div>
+            <div class="card-body">
+                <div class="card-block">
+                    <jhi-alert></jhi-alert>
+                    <div class="table-responsive" *ngIf="focusGroups">
+                        <table class="table table-responsive-md text-center">
+                            <thead>
+                            <tr>
+                                <th><span></span></th>
+                                <th><span>Nombre</span></th>
+                                <th><span>Descripción</span></th>
+                                <th><span>Fecha de inicio</span></th>
+                                <th><span>Fecha de finalizacion</span></th>
+                                <th><span>Código</span></th>
+                                <th><span>Acciones</span></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr *ngFor="let focusGroup of focusGroups ;trackBy: trackId">
+                                <td>
+                                    <div class="custom-control custom-checkbox m-0">
+                                        <input type="checkbox" class="custom-control-input" id="{{focusGroup.id}}">
+                                        <label class="custom-control-label" for="{{focusGroup.id}}"></label>
+                                    </div>
+                                </td>
+                                <td>{{focusGroup.name}}</td>
+                                <td>{{focusGroup.description}}</td>
+                                <td>{{focusGroup.beginDate | date:'mediumDate'}}</td>
+                                <td>{{focusGroup.endDate | date:'mediumDate'}}</td>
+                                <td>{{focusGroup.code}}</td>
+                                <td>
+                                    <a class="info p-0" data-original-title="" title="" [routerLink]="['/focus-group', focusGroup.id, 'view' ]">
+                                        <i class="ft-eye font-medium-3 mr-2"></i>
+                                    </a>
+                                    <a class="success p-0" data-original-title="" title="" [routerLink]="['/focus-group', focusGroup.id, 'edit']">
+                                        <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                                    </a>
+                                    <a class="danger p-0" data-original-title="" title="" [routerLink]="['/', 'focus-group', { outlets: { popup: focusGroup.id + '/delete'} }]"
+                                       replaceUrl="true"
+                                       queryParamsHandling="merge">
+                                        <i class="ft-x font-medium-3 mr-2"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </td>
-                <td>
-                    <div *ngIf="focusGroup.institution">
-                        <a [routerLink]="['../institution', focusGroup.institution?.id, 'view' ]" >{{focusGroup.institution?.id}}</a>
-                    </div>
-                </td>
-                <td>
-                    <span *ngFor="let category of focusGroup.categories; let last = last">
-                            <a class="form-control-static" [routerLink]="['../category', category?.id, 'view' ]">{{category.id}}</a>{{last ? '' : ', '}}
-                        </span>
-                </td>
-                <td>
-                    <span *ngFor="let participant of focusGroup.participants; let last = last">
-                            <a class="form-control-static" [routerLink]="['../participant', participant?.id, 'view' ]">{{participant.id}}</a>{{last ? '' : ', '}}
-                        </span>
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['/focus-group', focusGroup.id, 'view' ]"
-                                class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/focus-group', focusGroup.id, 'edit']"
-                                class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', 'focus-group', { outlets: { popup: focusGroup.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
