--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -143,6 +143,18 @@
                                     <span>Payment</span>
                                 </a>
                             </li>
+                            <li>
+                        <a class="dropdown-item" routerLink="aptitude-test" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span>Aptitude Test</span>
+                        </a>
+                    </li>
+                            <li>
+                        <a class="dropdown-item" routerLink="test-question" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span>Test Question</span>
+                        </a>
+                    </li>
                             <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                         </ul>
                     </li>
