--- a/src/main/webapp/app/entities/participant/participant.component.html
+++ b/src/main/webapp/app/entities/participant/participant.component.html
@@ -49,13 +49,13 @@
                                 <!--</td>-->
                                 <td _ngcontent-c6="">
                                     <a [routerLink]="['/participant', participant.id, 'view' ]" _ngcontent-c6="" class="info p-0" data-original-title="" title="">
-                                        <i _ngcontent-c6="" class="ft-user font-medium-3 mr-2">i</i>
+                                        <i _ngcontent-c6="" class="ft-user font-medium-3 mr-2"></i>
                                     </a>
                                     <a [routerLink]="['/participant', participant.id, 'edit']" _ngcontent-c6="" class="success p-0" data-original-title="" title="">
-                                        <i _ngcontent-c6="" class="ft-edit-2 font-medium-3 mr-2">e</i>
+                                        <i _ngcontent-c6="" class="ft-edit-2 font-medium-3 mr-2"></i>
                                     </a>
                                     <a [routerLink]="['/', 'participant', { outlets: { popup: participant.id + '/delete'} }]" _ngcontent-c6="" class="danger p-0" data-original-title="" title="">
-                                        <i _ngcontent-c6="" class="ft-x font-medium-3 mr-2">d</i>
+                                        <i _ngcontent-c6="" class="ft-x font-medium-3 mr-2"></i>
                                     </a>
                                 </td>
                             </tr>
