--- a/src/main/webapp/app/entities/aptitude-test/aptitude-test-form.component.html
+++ b/src/main/webapp/app/entities/aptitude-test/aptitude-test-form.component.html
@@ -12,44 +12,75 @@
                                  floatName.touched)">¡Nombre requerido!
                     </small>
                 </div>
-                <div>
-                    <h4 class="form-section"><i class="ft-clipboard"></i>Preguntas</h4>
-                    <div class="form-group">
-                        <label class="form-control-label" for="field_name">Pregunta</label>
-                        <input #floatQuestion="ngModel" type="text" class="form-control" name="name" id="field_question"
-                               [(ngModel)]="newQuestion.question" required/>
-                        <!--<small class="form-text text-muted danger" *ngIf="!floatQuestion.valid && (floatName.dirty || floatName.touched)">-->
-                            <!--¡Pregunta requerida!-->
-                        <!--</small>-->
-                    </div>
-                    <div>
-                        <button type="button" (click)="addQuestion()" id="addQuestionBtn" class="btn btn-raised btn-primary">
-                            <i class="ft-plus"></i><span> Agregar pregunta</span>
-                        </button>
+                <div id="addQuestionSection">
+                    <h4 class="form-section"><i class="ft-clipboard"></i>Formulario de preguntas</h4>
+                    <div class="row">
+                        <div id="testForm" class="col-md-6 col-sm-6 col-lg-6">
+                            <div class="form-group">
+                                <label class="form-control-label" for="field_name">Pregunta</label>
+                                <input [attr.disabled]="newQuestion.answers.length ? '' : null" #floatQuestion="ngModel"
+                                       type="text" class="form-control" name="question"
+                                       id="field_question"
+                                       [(ngModel)]="newQuestion.question"/>
+                                <!--<small class="form-text text-muted danger" *ngIf="!floatQuestion.valid && (floatName.dirty || floatName.touched)">-->
+                                <!--¡Pregunta requerida!-->
+                                <!--</small>-->
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label" for="field_answer">Respuesta</label>
+                                <input [attr.disabled]="!newQuestion.question ? '' : null" id="answerInput"
+                                       #floatQuestion="ngModel"
+                                       type="text" class="form-control" name="answer"
+                                       id="field_answer"
+                                       [(ngModel)]="newAnswer.answer"/>
+                                <!--<small class="form-text text-muted danger" *ngIf="!floatQuestion.valid && (floatName.dirty || floatName.touched)">-->
+                                <!--¡Pregunta requerida!-->
+                                <!--</small>-->
+                            </div>
+                            <div>
+                                <button [attr.disabled]="!newAnswer.answer ? '' : null" type="button"
+                                        (click)="addAnswerToQuestion()" id="addAnswerBtn"
+                                        class="btn btn-raised btn-primary">
+                                    <i class="ft-plus"></i><span id="id"> Agregar respuesta</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div id="testPreview" class="col-md-6 col-sm-6 col-lg-6">
+                            <label class="">Vista preliminar</label>
+                            <div *ngIf="newQuestion.question">
+                                <div class="card bg-blue-grey bg-lighten-5">
+                                    <div class="card-header">
+                                        <span class="text-bold-500 primary">¿{{newQuestion.question}}?</span>
+                                    </div>
+                                    <div id="previewAnswers" class="card-body">
+                                        <div class="card-block">
+                                            <span *ngFor="let answer of newQuestion.answers" class="display-block"><i
+                                                class="ft-minus"></i>{{answer.answer}}</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <button [attr.disabled]="newQuestion.answers.length >= 2 ? null : ''" type="button"
+                                            (click)="addQuestionToTest()" id="addQuestionBtn"
+                                            class="btn btn-raised btn-primary">
+                                        <i class="ft-check"></i><span> Completar pregunta.</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div id="questionCardSection" class="">
-                    <div class="card" *ngFor="let question of questions; let i = index">
+                    <h4 class="form-section"><i class="ft-clipboard"></i>Preguntas</h4>
+                    <div id="question{{i}}" class="card bg-blue-grey bg-lighten-5" *ngFor="let question of aptitudeTest.questions; let i = index">
                         <div class="card-header">
-                            <span class="text-bold-500 primary display-block">{{question.question}}</span>
+                            <span class="text-bold-500 primary">{{question.question}}</span>
                         </div>
                         <div class="card-body">
-                            <div id="addedAnswersSection" class="card-block">
-
-                            </div>
-                            <div id="addAnswersSection" class="card-block">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="field_name">Pregunta</label>
-                                    <input #floatQuestion="ngModel" type="text" class="form-control" name="name" id="field_answer"
-                                           [(ngModel)]="newQuestion.question" required/>
-                                    <!--<small class="form-text text-muted danger" *ngIf="!floatQuestion.valid && (floatName.dirty || floatName.touched)">-->
-                                    <!--¡Pregunta requerida!-->
-                                    <!--</small>-->
-                                </div>
-                                <div>
-                                    <button #parentQuestion="{{question}}" type="button" (click)="addAnswer(parentQuestion)" id="addAnswerBtn" class="btn btn-raised btn-primary">
-                                        <i class="ft-plus"></i><span> Agregar pregunta</span>
-                                    </button>
+                            <div class="card-block">
+                                <div class="card-block">
+                                            <span *ngFor="let answer of question.answers" class="display-block"><i
+                                                class="ft-minus"></i>{{answer.answer}}</span>
                                 </div>
                             </div>
                         </div>
